--- a/step_zero/l10n.yaml
+++ b/step_zero/l10n.yaml
@@ -1,3 +1,3 @@
-arb-dir: lib/src/localization
+arb-dir: lib/localization
 template-arb-file: intl_en.arb
 output-localization-file: app_localizations.dart
