--- a/step_zero/pubspec.yaml
+++ b/step_zero/pubspec.yaml
@@ -49,7 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # code metrrics
-  dart_code_metrics: ^4.17.0
+  dart_code_metrics: ^4.17.1
   # mocking
   mocktail: ^0.3.0
   # better goldens
@@ -77,8 +77,8 @@ flutter_intl:
   enabled: true   
   class_name: S   
   main_locale: en 
-  arb_dir: lib/src/localization
-  output_dir: lib/src/localization_gen
+  arb_dir: lib/localization
+  output_dir: lib/localization_gen
   use_deferred_loading: false
 
   
