--- a/step_zero/pubspec.yaml
+++ b/step_zero/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   logging_appenders: ^1.0.0
   provider: ^6.0.3
   path_provider: ^2.0.11
+  google_fonts: ^3.0.1
   
 
 dependency_overrides: 
