--- a/step_zero/pubspec.yaml
+++ b/step_zero/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dynamic_color: ^1.5.3
   # color picker for theme support
   flex_color_picker: ^2.5.0
+  catcher: ^0.6.9
   logging: ^1.0.2
   logging_appenders: ^1.0.0
   provider: ^6.0.3
